[package]
name = "rust"
version = "0.1.0"
authors = ["William Wennerström <william@wstrm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rust"
path = "main.rs"
